# Nexus-RFID-Tool

./: .gitignore  README.md
common/: common_defs.h
firmware/: Diagrams.md  platformio.ini
firmware/src/: main.cpp
firmware/test/test_embedded/: test_main.cpp
firmware/test/test_native/: test_main.cpp
gui/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
